# kp_arb

./: .gitignore  BULID_PLAN.md  CLAUDE.md  DESIGN.md  ETF 이론가.md  README.md  build_exe.bat  config.yaml  core_server.bat  keys.bat  kp_arb.spec  main.bat  monitor.bat  peg_order.bat  pyproject.toml  setup.bat  strategy_panel.bat  ~$주문화면0722.xlsx  괴리보드_엑셀매핑.md  설치.md  주문화면0722.xlsx
.claude/: settings.json
kp_arb/: app.py  bootstrap.py  config.py  core_client.py  core_engine.py  core_server.py  disparity.py  engine.py  etf_theory.py  fx.py  fx_monitor.py  fx_reporter.py  fx_service.py  instrument_selector.py  key_setup.py  logs.py  main_window.py  monitor.py  order_book.py  order_panel.py  paper_check.py  peg_order.py  pegging.py  risk.py  routing.py  runner.py  secrets_cli.py  session.py  session_service.py  signallink.py  spread.py  state_store.py  strategy_core.py  strategy_panel.py  theory.py  ticks.py  ws_check.py
tests/: test_bootstrap.py  test_config.py  test_core_engine.py  test_core_server.py  test_disparity.py  test_engine.py  test_enums.py  test_etf_theory.py  test_fx_exposure.py  test_fx_reporter.py  test_fx_service.py  test_fx_spot.py  test_hl_auth.py  test_hl_live.py  test_hl_market.py  test_hl_order.py  test_hl_ws.py  test_instrument_selector.py  test_integration.py  test_ls_account.py  test_ls_http.py  test_ls_order.py  test_ls_rest.py  test_ls_token.py  test_ls_ws.py  test_ls_ws_live.py  test_main_window.py  test_mock_gateways.py  test_monitor.py  test_order_book.py  test_order_intent.py  test_order_panel.py  test_pegging.py  test_risk.py  test_spread.py  (+10 more)
(+19 files in other folders)
