[project]
name = "kp-arb"
version = "0.0.1"
description = "Hyperliquid HIP-3 <-> 국내 종목(LS) 차익거래 인프라"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "aiosqlite>=0.20"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.8"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
